metadata-retriever/metadata/objects/Directors_and_Shareholders__c.object
<CustomObject>
    <fields>
        <fullName>Business_Phone__c</fullName>
        <label>Business Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Company__c</fullName>
        <label>Company</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dealer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Dealer</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.RecordTypeId</field>
                <operation>equals</operation>
                <value>Dealer</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Directors and Shareholders</relationshipLabel>
        <relationshipName>Directors_and_Shareholders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Mobile__c</fullName>
        <label>Mobile</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Person_Name__c</fullName>
        <label>Person Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Person_Type__c</fullName>
        <label>Person Type</label>
        <picklist>
            <picklistValues>
                <fullName>Director</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Shareholder</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Postal_Address_Address_Line_1__c</fullName>
        <label>Postal Address Address Line 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Postal_Address_Address_Line_2__c</fullName>
        <label>Postal Address Address Line 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Postal_Address_Country__c</fullName>
        <label>Postal Address Country</label>
        <picklist>
            <picklistValues>
                <fullName>Australia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>New Zealand</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Postal_Address_Post_Code__c</fullName>
        <label>Postal Address Post Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Postal_Address_State__c</fullName>
        <label>Postal Address State</label>
        <picklist>
            <picklistValues>
                <fullName>Australian Capital Territory</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>New South Wales</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Queensland</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Victoria</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tasmania</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Western Australia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>South Australia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Northern Territory</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Postal_Address_Suburb__c</fullName>
        <label>Postal Address Suburb</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Shareholder_Percentage__c</fullName>
        <label>Shareholder Percentage</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Street_Address_Address_Line_1__c</fullName>
        <label>Street Address Address Line 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Street_Address_Address_Line_2__c</fullName>
        <label>Street Address Address Line 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Street_Address_Country__c</fullName>
        <label>Street Address Country</label>
        <picklist>
            <picklistValues>
                <fullName>Australia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>New Zealand</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Street_Address_Post_Code__c</fullName>
        <label>Street Address Post Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Street_Address_State__c</fullName>
        <label>Street Address State</label>
        <picklist>
            <picklistValues>
                <fullName>Australian Capital Territory</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>New South Wales</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Queensland</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Victoria</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tasmania</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Western Australia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>South Australia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Northern Territory</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Street_Address_Suburb__c</fullName>
        <label>Street Address Suburb</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <label>Directors and Shareholders</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Directors and Shareholders</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>